# my-sql-fast-ui

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json  server.js
.github/workflows/: desktop-build.yml
public/: index.html
public/assets/: tw.css
public/js/: ai.js  app.js  autocomplete.js  boot.js  builder.js  cm6.js  connections.js  console.js  core.js  editor.js  saved.js  transfer.js
server/: ai.js  auth.js  connections.js  db.js  query.js  schema.js  store.js
src/: input.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/placeholder/: index.html
src-tauri/src/: lib.rs  main.rs
