[package]
name = "mysql-fast-ui"
version = "2.0.0"
description = "Fast MySQL console — desktop shell"
edition = "2021"
rust-version = "1.77"

[lib]
name = "mysql_fast_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
uuid = { version = "1", features = ["v4"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
